--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "nodejs-authenicate-azure",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -16,12 +17,14 @@
     "url": "https://github.com/anhvoduy/nodejs-authenicate-azure/issues"
   },
   "homepage": "https://github.com/anhvoduy/nodejs-authenicate-azure#readme",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "simple-oauth2": "^2.2.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
-    "express-session": "^1.15.6",
+    "express-session": "^1.15.6"
+  },
+  "devDependencies": {
     "lodash": "^4.17.11",
     "moment": "^2.24.0"
   }
