--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
-  "name": "nodejs-authenicate-azure",
-  "version": "1.0.0",
-  "description": "nodejs-authenicate-azure",
+  "name": "node-to-azure",
+  "version": "0.1.2",
+  "description": "node to azure",
   "main": "app.js",
+  "author": "voduyanh",
+  "email": "voduyanh1984@yahoo.com",
+  "license": "ISC",
+  "nodeVersion": {
+    "node": "12.15.0",
+    "npm": "6.13.4"
+  },
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/anhvoduy/nodejs-authenicate-azure.git"
+    "url": "git+https://github.com/anhvoduy/node-to-azure.git"
   },
-  "author": "anhvoduy",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/anhvoduy/nodejs-authenicate-azure/issues"
+    "url": "https://github.com/anhvoduy/node-to-azure/issues"
   },
-  "homepage": "https://github.com/anhvoduy/nodejs-authenicate-azure#readme",
-  "dependencies": {},
-  "devDependencies": {
+  "homepage": "https://github.com/anhvoduy/node-to-azure#readme",
+  "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
     "lodash": "^4.17.11",
+    "mocha": "^8.1.3",
     "moment": "^2.24.0"
   }
 }
