--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
