--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/anhvoduy/node-to-azure#readme",
   "dependencies": {
+    "@azure/cosmos": "^3.9.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
