--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 node app.js",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -38,6 +38,7 @@
     "chai": "^4.2.0",
     "lodash": "^4.17.11",
     "mocha": "^8.1.3",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "nodemon": "^2.0.4"
   }
 }
