--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 nodemon app.js",
+    "dev": "set NODE_TLS_REJECT_UNAUTHORIZED=0 && npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/anhvoduy/node-to-azure#readme",
   "dependencies": {
-    "simple-oauth2": "^2.2.1",
     "@azure/cosmos": "^3.9.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
@@ -32,8 +31,12 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "node-fetch": "^2.6.1",
     "path": "^0.12.7",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "request": "^2.88.2",
+    "simple-oauth2": "^2.2.1",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
